tests/snapshot/snapshots/snapshot__error_dictionary_contract_fail.ncl.snap
---
source: tests/snapshot/main.rs
expression: snapshot
---
error: contract broken by a value
  ┌─ :1:5
  │
1 │ {_: Str}
  │     --- expected dictionary field type
  │
  ┌─ [INPUTS_PATH]/errors/dictionary_contract_fail.ncl:1:9
  │
1 │ { foo = 1, bar = "bar" } | {_: Str}
  │         ^ applied to this expression

note: 
  ┌─ [INPUTS_PATH]/errors/dictionary_contract_fail.ncl:1:28
  │
1 │ { foo = 1, bar = "bar" } | {_: Str}
  │                            ^^^^^^^^ bound here


